[package]
name = "climbing"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
aws-config = "1.1"
aws-sdk-s3 = "1.11"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = {version = "0.6.20", features = ["headers"]}
tower-http = { version = "0.4", features = ["cors"] }
validator = { version = "0.16", features = ["derive"] }
chrono = {version = "0.4.40"}

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3"
